adjusting layout bugs

--- a/src/pages/MoviePage/MoviePage.module.scss
+++ b/src/pages/MoviePage/MoviePage.module.scss
@@ -1,45 +1,86 @@
 .MoviePage {
   text-align: center;
-  display: grid;
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
-  margin: 20px;
+  max-height: 100%;
+  padding: 20px;
   max-width: 100%;
 
-  overflow-y: scroll;
+  display: grid;
+
+  overflow-y: auto;
   overflow-x: hidden;
 
   grid-template:
-    "poster info" 1fr
+    "poster title" 48px
+    "poster ratings" 96px
+    "poster description" 1fr
     / 1fr 2fr;
+  gap: 16px;
 
   .PosterContainer {
     grid-area: poster;
-    min-width: 300px;
-    img {
-      object-fit: fill;
-    }
-  }
-
-  .InfoContainer {
-    grid-area: info;
-    min-width: 0;
     display: grid;
+    min-width: 0;
     grid-template:
-      "title" 64px
-      "ratings" auto
-      "description" 1fr
+      "posterImg" 1fr
+      "posterInfo" 32px
       / 1fr;
 
-    .Title {
-      grid-area: title;
+    img {
+      grid-area: posterImg;
+      width: 100%;
     }
-    .RatingBox {
-      grid-area: ratings;
-    }
-    .Description {
-      min-height: 0;
-      grid-area: description;
+    > div {
+      grid-area: posterInfo;
     }
   }
+  .TitleContainer {
+    grid-area: title;
+    margin: 0;
+    text-align: left;
+    font-weight: bold;
+    font-size: 48px;
+  }
+  .RatingsContainer {
+    grid-area: ratings;
+    color: #aaaaaa;
+    display: inline-flex;
+    text-align: center;
+    margin: 0;
+    gap: 32px;
+  }
+  .DescriptionContainer {
+    grid-area: description;
+    text-align: justify;
+    max-width: 100%;
+    text-justify: inter-word;
+
+    p {
+      max-width: 100%;
+      overflow-wrap: break-word;
+    }
+  }
+
+  // .InfoContainer {
+  //   grid-area: info;
+  //   min-width: 0;
+  //   display: grid;
+  //   grid-template:
+  //     "title" 64px
+  //     "ratings" auto
+  //     "description" 1fr
+  //     / 1fr;
+
+  //   .Title {
+  //     grid-area: title;
+  //   }
+  //   .RatingBox {
+  //     grid-area: ratings;
+  //   }
+  //   .Description {
+  //     min-height: 0;
+  //     grid-area: description;
+  //   }
+  // }
 }
